# pfennig

./: README.md  pfennig.cabal  stack.yaml
database/: create-migration.sh  run-migrations.sh
database/migrations/: 1511095319-initial-schema.sql  1511306089-remove-salt-column.sql
src/: Lib.hs
