name:                pfennig
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/muhbaasu/pfennig#readme
license:             BSD3
license-file:        LICENSE
author:              Marcel Büsing, Samuel Schuhmacher
maintainer:          pfennig@muhbaasu.de
copyright:           2017 Marcel Büsing, Samuel Schuhmacher
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall -Wincomplete-record-updates -Wmissing-exported-signatures -Wincomplete-uni-patterns -Widentities
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , bytestring
                     , lens
                     , mtl
                     , opaleye
                     , postgresql-simple
                     , text
                     , time
                     , unordered-containers
                     , vector
  default-language:    Haskell2010

executable pfennig-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , pfennig
  default-language:    Haskell2010

test-suite pfennig-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , pfennig
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/muhbaasu/pfennig
